tests/expectations/compiler/array/array_too_large_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372077]: An array cannot have more than 32 elements, found one with 33 elements
    --> compiler-test:4:20
     |
   4 |     transition foo(a: [bool; 33]) -> bool {
     |                    ^
"""]
